# web-app-bolao-rdg

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.backend  README.md  docker-compose.yml  fly.toml  middleware.ts  test-api.py  test-scraping.py
.claude/: settings.json
app/: next.config.mjs  (+4 more)
backend/: Dockerfile  migrate.py  pyproject.toml  start.sh
backend/app/: main.py
backend/app/api/routes/: admin.py  auth.py  internal.py  member.py
backend/app/api/schemas/: frontend.py
backend/app/core/: config.py  security.py
backend/app/data/: third_place_slot_matrix.json
backend/app/domain/: bracket.py  scoring.py  standings.py
backend/app/integrations/: api_football.py  fifa_gameday.py  google_sheets.py  the_sports_db.py  the_sports_db_utils.py
backend/app/models/: schema.py
backend/app/repositories/: queries.py
backend/app/seed/: load_demo_group_state.py  seeder.py
backend/app/services/: automatic_sync.py  email_service.py  frontend_contract_service.py  integration_settings.py  match_status.py  recalculation_service.py  sync_service.py  team_metadata.py
backend/config/: app-settings.prod.yaml  app-settings.yaml
backend/tests/contract/: test_frontend_contracts.py
backend/tests/integration/: test_admin_sync.py  test_admin_user_soft_delete.py  test_auto_sync_internal.py  test_member_access.py
backend/tests/unit/: test_automatic_sync_runtime.py  test_automatic_sync_service.py  test_bracket.py  test_db_connect_args.py  test_fifa_gameday.py  test_phase_config_seed.py  test_scoring.py  test_standings.py  test_sync_log_provider.py  test_the_sports_db.py
(+439 files in other folders)
