[project]
name = "bolao-copa-rdg-backend"
version = "0.1.0"
description = "FastAPI backend for Bolao Copa RDG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "psycopg[binary]>=3.2.9",
    "PyYAML>=6.0.2",
    "sqlalchemy>=2.0.41",
    "python-multipart>=0.0.20",
    "playwright>=1.54.0",
    "uvicorn[standard]>=0.34.2",
    "resend>=2.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
]

[project.scripts]
backend-show-settings = "app.core.config:print_settings"

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "RUF"]
ignore = ["B008", "E501", "F401", "N815", "UP017", "UP042", "UP047"]

[tool.mypy]
python_version = "3.12"
plugins = []
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true
